k8s/geek_time/test/senior/dashboard/Ingress/dash-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: dash-tls
  namespace: kubernetes-dashboard
type: kubernetes.io/tls

data:
  tls.crt: |
    MIIC7TCCAdWgAwIBAgIUDw6/S7f7StqlnI/jzFmHKAZS480wDQYJKoZIhvcNAQEL
[...]
    TFeRnYW4R1JGz2FJFDGkcBW3XGVu5X37856Ya/1sza7a
  tls.key: |
    MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDjRBnSmnCdNRTp
[...]
    ns1hoauc8TMNJ6PWDpaH
